add entities with their relations