@@ -2,7 +2,6 @@ package com.skowly.core.controller;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -11,10 +10,10 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.skowly.core.model.CourseAssignment;
-import com.skowly.core.model.Student;
+import com.skowly.core.domain.model.CourseInstance;
+import com.skowly.core.domain.model.Student;
+import com.skowly.core.domain.repository.StudentRepository;
 import com.skowly.core.model.ui.CourseCard;
-import com.skowly.core.repository.StudentRepository;
 import com.skowly.core.service.CourseAssignmentService;
 
 @RestController
@@ -25,25 +24,27 @@ public class ParentBoardController {
 	CourseAssignmentService teacherAssignmentService;
 	@Autowired
 	StudentRepository studentRepository;
+
 	@GetMapping("/students/{id}/courses")
 	public ResponseEntity<List<CourseCard>> getCourses(@PathVariable Long id) {
-		List<CourseAssignment> courseAssignements = teacherAssignmentService.getTeacherAssignementsByStudentId(id);
+		List<CourseInstance> courseInstances = teacherAssignmentService.getCourseInstancesByStudentId(id);
 
-		if (courseAssignements == null) {
+		if (courseInstances == null) {
 			return ResponseEntity.ok(new ArrayList<>());
 		}
-		List<CourseCard> courseCards = courseAssignements.stream().map(assignement -> {
+		List<CourseCard> courseCards = courseInstances.stream().map(courseIntance -> {
 			CourseCard couseCard = new CourseCard();
-			couseCard.setTeacherName(assignement.getTeacher().getName());
-			couseCard.setCourseName(assignement.getCourse().getCourseName());
+			// couseCard.setTeacherName(courseIntance.getInstructor().getName());
+			// couseCard.setCourseName(courseIntance.getCourse().getCourseName());
 			return couseCard;
-		}).collect(Collectors.toList());
+		}).toList();
 		return ResponseEntity.ok(courseCards);
 
 	}
+
 	@GetMapping("/students")
-	public ResponseEntity<List<Student>> getStudents(){	
-		return ResponseEntity.ok (studentRepository.findAll());
+	public ResponseEntity<List<Student>> getStudents() {
+		return ResponseEntity.ok(studentRepository.findAll());
 	}
 
 }
